--- a/src/css/app.css
+++ b/src/css/app.css
@@ -231,6 +231,10 @@ button {
   width: 12px;
 }
 
+::-webkit-scrollbar {
+  height: 11.5px;
+}
+
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
